@@ -1,7 +1,7 @@
 
-context('bridge sampling print method')
+context('bridge sampling bf function')
 
-test_that("bf print method correctly displayed", {
+test_that("bf various basic checks", {
 
   # library(bridgesampling)
   library(mvtnorm)
@@ -23,6 +23,8 @@ test_that("bf print method correctly displayed", {
   bridge_warp3 <- bridge_sampler(samples = x, log_posterior = log_density,
                                   data = NULL, lb = lb, ub = ub,
                                  method = "warp3", silent = TRUE)
+  expect_error(bf(bridge_normal, 4), "class 'bridge' or 'bridge_list'")
+
   BF <- bf(bridge_normal, bridge_warp3)
   log_BF <- bf(bridge_normal, bridge_warp3, log = TRUE)
 
@@ -37,18 +39,23 @@ test_that("bf print method correctly displayed", {
 
 
   # repetitions > 1
-  bridge_normal <- bridge_sampler(samples = x, log_posterior = log_density,
+  bridge_normal_mult <- bridge_sampler(samples = x, log_posterior = log_density,
                                   data = NULL, lb = lb, ub = ub,
                                   method = "normal", silent = TRUE, repetitions = 2)
-  bridge_warp3 <- bridge_sampler(samples = x, log_posterior = log_density,
+  bridge_warp3_mult <- bridge_sampler(samples = x, log_posterior = log_density,
                                  data = NULL, lb = lb, ub = ub,
                                  method = "warp3", silent = TRUE, repetitions = 2)
 
-  BF <- bf(bridge_normal, bridge_warp3)
-  log_BF <- bf(bridge_normal, bridge_warp3, log = TRUE)
+  BF_mult <- bf(bridge_normal_mult, bridge_warp3_mult)
+  log_BF_mult <- bf(bridge_normal_mult, bridge_warp3_mult, log = TRUE)
 
-  expect_output(print(BF), "based on the medians")
-  expect_output(print(log_BF), "based on the medians")
+  expect_output(print(BF_mult), "based on the medians")
+  expect_output(print(log_BF_mult), "based on the medians")
+
+  ## bf with multi and singular objects
+  expect_is(suppressWarnings(bf(bridge_normal_mult, bridge_normal)), "bf_bridge_list")
+  expect_is(bf(bridge_normal, bridge_normal_mult), "bf_bridge")
+  expect_error(bf(bridge_normal_mult, 4), "class 'bridge' or 'bridge_list'")
 
   # default
   BF <- bf(1, 2)
